# ProductAPI

./: .env  docker-compose.yml  pyproject.toml
src/: config.py  create_tables.py  database.json  db.py  main.py  models.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 1c670732933a_creating_products_table_and_category_.py
